[gd_scene load_steps=104 format=3 uid="uid://cmrcb5f88q7ln"]

[ext_resource type="Script" uid="uid://cunoqsqhikrem" path="res://barkley2/scenes/Objects/_enemies/o_gibs.gd" id="1_ujp5s"]
[ext_resource type="Texture2D" uid="uid://ola3qd4svq40" path="res://barkley2/assets/b2_original/images/merged/s_enemyDeath_parts.png" id="2_utepj"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_Shadow.tscn" id="2_ycp8u"]
[ext_resource type="Texture2D" uid="uid://d10w0efa53f2k" path="res://barkley2/assets/b2_original/images/merged/s_alienMenace_med_gibs.png" id="3_pvkl8"]
[ext_resource type="Texture2D" uid="uid://dsf3f3h1fg0ye" path="res://barkley2/assets/b2_original/images/merged/s_catfish_LrgGibs.png" id="4_xr60u"]
[ext_resource type="Texture2D" uid="uid://oayo3n8usbed" path="res://barkley2/assets/b2_original/images/merged/s_enemy_rat_bones.png" id="4_ycp8u"]
[ext_resource type="Texture2D" uid="uid://djafu64slqaei" path="res://barkley2/assets/b2_original/images/merged/s_catfish_gibs.png" id="5_5ry1k"]
[ext_resource type="Texture2D" uid="uid://c630n0bav6d0u" path="res://barkley2/assets/b2_original/images/merged/s_cgremlin_small_gibs.png" id="6_wgs0q"]
[ext_resource type="Texture2D" uid="uid://dqw7kc1xjhpd4" path="res://barkley2/assets/b2_original/images/merged/s_koboldLarge_gibs.png" id="9_14s8l"]
[ext_resource type="Texture2D" uid="uid://ddsvvhtnxj1ex" path="res://barkley2/assets/b2_original/images/merged/s_koboldMed_gibs.png" id="10_qucee"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0jqbp"]
atlas = ExtResource("3_pvkl8")
region = Rect2(0, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ticc5"]
atlas = ExtResource("3_pvkl8")
region = Rect2(23, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rctpq"]
atlas = ExtResource("3_pvkl8")
region = Rect2(46, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5d8x"]
atlas = ExtResource("3_pvkl8")
region = Rect2(69, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_muuw1"]
atlas = ExtResource("3_pvkl8")
region = Rect2(92, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdy5l"]
atlas = ExtResource("3_pvkl8")
region = Rect2(115, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtgbb"]
atlas = ExtResource("3_pvkl8")
region = Rect2(138, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6cec"]
atlas = ExtResource("3_pvkl8")
region = Rect2(161, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp8f5"]
atlas = ExtResource("3_pvkl8")
region = Rect2(184, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpnec"]
atlas = ExtResource("3_pvkl8")
region = Rect2(207, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_l142s"]
atlas = ExtResource("3_pvkl8")
region = Rect2(230, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_wir01"]
atlas = ExtResource("3_pvkl8")
region = Rect2(253, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5h26"]
atlas = ExtResource("3_pvkl8")
region = Rect2(276, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt1vb"]
atlas = ExtResource("4_xr60u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ennbp"]
atlas = ExtResource("4_xr60u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv0wu"]
atlas = ExtResource("4_xr60u")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di8hs"]
atlas = ExtResource("4_xr60u")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4n00"]
atlas = ExtResource("4_xr60u")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnqdp"]
atlas = ExtResource("4_xr60u")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojr3u"]
atlas = ExtResource("4_xr60u")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn4ip"]
atlas = ExtResource("4_xr60u")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwmis"]
atlas = ExtResource("4_xr60u")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2oeo"]
atlas = ExtResource("4_xr60u")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffda3"]
atlas = ExtResource("4_xr60u")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gsdv"]
atlas = ExtResource("4_xr60u")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga5qi"]
atlas = ExtResource("5_5ry1k")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4a7e"]
atlas = ExtResource("5_5ry1k")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_54003"]
atlas = ExtResource("5_5ry1k")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd6ow"]
atlas = ExtResource("5_5ry1k")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiraa"]
atlas = ExtResource("5_5ry1k")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw7wg"]
atlas = ExtResource("5_5ry1k")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qo8x"]
atlas = ExtResource("5_5ry1k")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtr3u"]
atlas = ExtResource("5_5ry1k")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw6iv"]
atlas = ExtResource("5_5ry1k")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8lew"]
atlas = ExtResource("5_5ry1k")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkh26"]
atlas = ExtResource("5_5ry1k")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehu7y"]
atlas = ExtResource("5_5ry1k")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_id8l8"]
atlas = ExtResource("6_wgs0q")
region = Rect2(0, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tdwg"]
atlas = ExtResource("6_wgs0q")
region = Rect2(18, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_o68k3"]
atlas = ExtResource("6_wgs0q")
region = Rect2(36, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj616"]
atlas = ExtResource("6_wgs0q")
region = Rect2(54, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycp8u"]
atlas = ExtResource("2_utepj")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pcgn"]
atlas = ExtResource("2_utepj")
region = Rect2(21, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_j114c"]
atlas = ExtResource("2_utepj")
region = Rect2(42, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3qel"]
atlas = ExtResource("2_utepj")
region = Rect2(63, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_73mcb"]
atlas = ExtResource("2_utepj")
region = Rect2(84, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_helw1"]
atlas = ExtResource("2_utepj")
region = Rect2(105, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvkl8"]
atlas = ExtResource("2_utepj")
region = Rect2(126, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr60u"]
atlas = ExtResource("2_utepj")
region = Rect2(147, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ry1k"]
atlas = ExtResource("2_utepj")
region = Rect2(168, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgs0q"]
atlas = ExtResource("2_utepj")
region = Rect2(189, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_14s8l"]
atlas = ExtResource("2_utepj")
region = Rect2(210, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qucee"]
atlas = ExtResource("2_utepj")
region = Rect2(231, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_663bg"]
atlas = ExtResource("2_utepj")
region = Rect2(252, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ro4v"]
atlas = ExtResource("2_utepj")
region = Rect2(273, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kccf"]
atlas = ExtResource("2_utepj")
region = Rect2(294, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxtfm"]
atlas = ExtResource("2_utepj")
region = Rect2(315, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh5p5"]
atlas = ExtResource("2_utepj")
region = Rect2(336, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5xqs"]
atlas = ExtResource("2_utepj")
region = Rect2(357, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_cigi4"]
atlas = ExtResource("2_utepj")
region = Rect2(378, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m1ri"]
atlas = ExtResource("2_utepj")
region = Rect2(399, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjehx"]
atlas = ExtResource("2_utepj")
region = Rect2(420, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8hub"]
atlas = ExtResource("2_utepj")
region = Rect2(441, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxhn6"]
atlas = ExtResource("2_utepj")
region = Rect2(462, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfet7"]
atlas = ExtResource("2_utepj")
region = Rect2(483, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_obl1d"]
atlas = ExtResource("2_utepj")
region = Rect2(504, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_86awe"]
atlas = ExtResource("2_utepj")
region = Rect2(525, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_alanb"]
atlas = ExtResource("2_utepj")
region = Rect2(546, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8elx"]
atlas = ExtResource("2_utepj")
region = Rect2(567, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_donrs"]
atlas = ExtResource("2_utepj")
region = Rect2(588, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf0e1"]
atlas = ExtResource("2_utepj")
region = Rect2(609, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_yudnd"]
atlas = ExtResource("2_utepj")
region = Rect2(630, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mgah"]
atlas = ExtResource("2_utepj")
region = Rect2(651, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_p462t"]
atlas = ExtResource("4_ycp8u")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpl1h"]
atlas = ExtResource("4_ycp8u")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsnhr"]
atlas = ExtResource("9_14s8l")
region = Rect2(0, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd8ov"]
atlas = ExtResource("9_14s8l")
region = Rect2(32, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3df7m"]
atlas = ExtResource("9_14s8l")
region = Rect2(64, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_og511"]
atlas = ExtResource("9_14s8l")
region = Rect2(96, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_aolle"]
atlas = ExtResource("9_14s8l")
region = Rect2(128, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_30uk2"]
atlas = ExtResource("9_14s8l")
region = Rect2(160, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk8pj"]
atlas = ExtResource("9_14s8l")
region = Rect2(192, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn5en"]
atlas = ExtResource("9_14s8l")
region = Rect2(224, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkhtd"]
atlas = ExtResource("9_14s8l")
region = Rect2(256, 0, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ntll"]
atlas = ExtResource("10_qucee")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkccu"]
atlas = ExtResource("10_qucee")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iof4y"]
atlas = ExtResource("10_qucee")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpdj"]
atlas = ExtResource("10_qucee")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ruh"]
atlas = ExtResource("10_qucee")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vca6e"]
atlas = ExtResource("10_qucee")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x82av"]
atlas = ExtResource("10_qucee")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqxuj"]
atlas = ExtResource("10_qucee")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p462t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jqbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ticc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rctpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5d8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muuw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdy5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtgbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6cec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp8f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpnec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l142s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wir01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5h26")
}],
"loop": true,
"name": &"s_alienMenace_med_gibs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt1vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ennbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv0wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di8hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4n00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnqdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojr3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn4ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwmis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2oeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffda3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gsdv")
}],
"loop": true,
"name": &"s_catfish_LrgGibs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga5qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4a7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54003")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd6ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiraa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw7wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtr3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw6iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8lew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkh26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehu7y")
}],
"loop": true,
"name": &"s_catfish_gibs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_id8l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tdwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o68k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj616")
}],
"loop": true,
"name": &"s_cgremlin_small_gibs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycp8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pcgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j114c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3qel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73mcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_helw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvkl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr60u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ry1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgs0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14s8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qucee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_663bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ro4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kccf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxtfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh5p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5xqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cigi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m1ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjehx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8hub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxhn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfet7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obl1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86awe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alanb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8elx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_donrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf0e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yudnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mgah")
}],
"loop": true,
"name": &"s_enemyDeath_parts",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p462t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpl1h")
}],
"loop": true,
"name": &"s_enemy_rat_bones",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsnhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd8ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3df7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og511")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aolle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30uk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk8pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkhtd")
}],
"loop": true,
"name": &"s_koboldLarge_gibs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ntll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkccu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iof4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlpdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ruh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vca6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x82av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqxuj")
}],
"loop": true,
"name": &"s_koboldMed_gibs",
"speed": 5.0
}]

[node name="o_gibs" type="Node2D"]
script = ExtResource("1_ujp5s")

[node name="o_Shadow" parent="." instance=ExtResource("2_ycp8u")]
scale = Vector2(0.25, 0.125)

[node name="part_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p462t")
animation = &"s_enemy_rat_bones"

[node name="gib_life_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="gib_sfx" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = &"Audio"
